# Artceleration-EEE598-Assn2

artceleration_app/src/main/: AndroidManifest.xml
artcelerationlibrary/: CMakeLists.txt
artcelerationlibrary/src/main/: AndroidManifest.xml
artcelerationlibrary/src/main/cpp/: AllImageTransforms.cpp  FilterHeaders.h  GaussianBlur.cpp  MotionBlur.cpp  NeonEdges.cpp  SobelFilter.cpp  UnsharpMask.cpp
artcelerationlibrary/src/main/java/edu/asu/msrs/artcelerationlibrary/: ArtLib.java  MemoryFileUtil.java  TransformService.java
